Prevent callout icon from being cropped

--- a/src/amo/components/GetFirefoxButton/styles.scss
+++ b/src/amo/components/GetFirefoxButton/styles.scss
@@ -66,5 +66,6 @@ $callout-color: $yellow-50;
   background-image: url('../Notice/img/generic-info-mark.svg');
   height: 16px;
   margin: 0;
+  min-width: 16px;
   width: 16px;
 }
